log
Fri 29 Sep 2023 01:56:55 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c:22:3: error: expected ‘;’ before ‘void’
   22 | }g
      |   ^
      |   ;
......
   25 | void heap_push(Heap* pq, void* data, int priority){
      | ~~~~
Compilation failed
9dbabca
Fri 29 Sep 2023 01:57:21 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ca32b6a
